# korus_bridge

./: README.md
comms/custom_msgs/: CMakeLists.txt  stack.xml
comms/custom_msgs/ccra_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
comms/custom_msgs/ccra_msgs/action/: GetCurrentStatus.action  MoveRobotXY.action
comms/custom_msgs/gripper_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
comms/custom_msgs/rapi_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
comms/custom_msgs/rapi_msgs/action/: Dock.action
comms/custom_msgs/vision_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
comms/custom_msgs/vision_msgs/action/: FillCupWithWater.action  ObjectDetection.action
comms/custom_msgs/vision_msgs/msg/: GrabbingObject.msg
comms/korus_comms/: CMakeLists.txt  stack.xml
comms/korus_comms/pick_and_place_msgs/: CMakeLists.txt
comms/korus_comms/pick_and_place_msgs/action/: LookForObject.action  PickObject.action  PlaceObject.action
pick_and_place_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
